--- a/zakalwe.css
+++ b/zakalwe.css
@@ -548,15 +548,13 @@ table {
 article {
   margin: calc(100vh) auto 0;
   max-width: 940px;
+  padding-top: 1px;
+  /* force padding */
   width: 100%; }
   article h1, article h2, article h3, article h4, article h5, article h6 {
     clear: both; }
-  @media screen and (min-width: 768px) {
-    article {
-      padding-top: 1px; } }
   @media screen and (max-width: 1024px) {
     article {
-      margin: 0 auto;
       max-width: 90%; } }
   @media screen and (max-width: 768px) {
     article {
